Added kids and drama movie sessions from the API

--- a/index.html
+++ b/index.html
@@ -18,12 +18,21 @@
 		</form>
 	</header>
 
-	<div class="section-name">
-		<h2>Most Popular</h2>
-	</div>
+	<main>
+		<h2>Popular Movies</h2>
+		<section id="popular"></section>	
+	</main>
 
-	<main id="main"></main>
+	<main>
+		<h2>Kids Movies</h2>
+		<section id="kids"></section>
+	</main>
+
+	<main>
+		<h2>Drama Movies</h2>
+		<section id="drama"></section>
+	</main>	
 	
-	<script src="js/main.js"></script>
+	<script src="js/test.js"></script>
 </body>
 </html>
