Added a README file

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 </head>
 <body>
 	<header>
+		<div>
 		<form id="form">
-			<input type="text" id="search" class="search" placeholder="Search">
+			<input type="text" id="search" class="search" placeholder="Search for a movie">
 		</form>
 	</header>
 
@@ -33,6 +34,6 @@
 		<section id="drama"></section>
 	</main>	
 	
-	<script src="js/test.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
